feat: add home fragment

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,10 +18,10 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-    viewBinding {
-        true
+    buildFeatures{
+        viewBinding true
     }
-    
+
     buildTypes {
         release {
             minifyEnabled false
